# etl-agent

./: AUTOMATED_MODE.md  CLAUDE.md  DESIGN.md  EVAL.md  EVALUATION_FRAMEWORK.md  IMPROVEMENTS_SUMMARY.md  POC.md  SCHEMA_GENERATOR_INTEGRATION.md  UI_DESIGN.md  demo_modes.py  ecommerce_orders.json  pyproject.toml  run_server.py  schema.json  show_prompts.py  test_automated_mode.py  test_debug.py  test_etl.py  test_file_copying.py  test_fixed_evaluator.py  test_improved_logging.py  test_integration.py  test_mode_comparison.py  test_persistent_chat.py  test_schema_generator_eval.py  test_websocket.py
.claude/agents/: agentic-app-evaluator.md  etl-schema-generator.md  gemini-book-summarizer.md  ios-app-developer.md
app/: main.py
app/models/: etl.py
app/prompts/: automated_mode.md  base_prompt.md  interactive_mode.md
app/services/: claude_service.py
app/utils/: workspace.py
frontend/: index.html  messages.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/public/: flightData3.json  mockSchemas.json  testData.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  CodeEditor.tsx  EtlWorkflow.tsx  FileTree.tsx  FileUpload.tsx  SimpleSchemaPreview.tsx
frontend/src/hooks/: useFileUpload.ts  useWebSocketChat.ts
frontend/src/services/: api.ts
frontend/src/types/: etl.ts  (+2 more)
tests/: comprehensive_etl_evaluation_demo.py  etl_monitoring.py  eval.py  evaluation_config.py  file_based_evaluator.py
tests/agent_tests/: test_base_agent.py
workspace/etl_20250905_214458_482/: flightData2.json
(+6 files in other folders)
